--- a/templates/prizesPage.html
+++ b/templates/prizesPage.html
@@ -37,7 +37,7 @@
                                 <a href="/gifts">Подарки</a>
                             </li>
                             <li class="navigation-menu__item">
-                                Поставщики
+                                Победители
                             </li>
                         </ul>
                     </nav>
@@ -85,14 +85,29 @@
                 <div class="icon-wrapper">
                     <img class="main-prizes-tvIcon" src="../static/images/prizesPageImages/tvIcon.png" />
                     <span class="main-prizes-icon-text">LED-телевизор диагональ 65 дюймов</span>
+                    <img class="main-prizes-tvIcon-count main-count" src="../static/images/prizesPageImages/mainCountPrize.png">
                 </div>
                 <div class="icon-wrapper">
                     <img class="main-prizes-playIcon" src="../static/images/prizesPageImages/playstationIcon.png" />
                     <span class="main-prizes-icon-text">Игровая консоль PlayStation 5 Slim</span>
+                    <img class="main-prizes-playIcon-count main-count" src="../static/images/prizesPageImages/mainCountPrize.png">
                 </div>
                 <div class="icon-wrapper">
                     <img class="main-prizes-holodilnikIcon" src="../static/images/prizesPageImages/holodilnikIcon.png" />
                     <span class="main-prizes-icon-text">Холодильник  LG с морозильником</span>
+                    <img class="main-prizes-holodilnikIcon-count main-count" src="../static/images/prizesPageImages/mainCountPrize.png">
+                </div>
+                <div class="icon-wrapper-column">
+                    <div class="icon-wrapper">
+                        <img class="main-prizes-laptopIcon" src="../static/images/prizesPageImages/laptopImage.png" />
+                        <span class="main-prizes-column-icon-text">Ноутбук</span>
+                        <img class="main-prizes-laptopIcon-count main-count" src="../static/images/prizesPageImages/mainCountPrize.png">
+                    </div>
+                    <div class="icon-wrapper">
+                        <img class="main-prizes-robotMainIcon" src="../static/images/prizesPageImages/robotMainImage.png" />
+                        <span class="main-prizes-column-icon-text">Робот-пылесос</span>
+                        <img class="main-prizes-robotMainIcon-count main-count" src="../static/images/prizesPageImages/mainCountPrize.png">
+                    </div>
                 </div>
             </div>
         </div>
@@ -109,25 +124,41 @@
             <div class="week-prizes-icon-container">
                 <div class="week-grill-prize-container week-icon-container">
                     <img class="week-grill-prize-icon week-icon" src="../static/images/prizesPageImages/grillIcon.png" alt="" />
-                    <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
+                    <span class="week-prize-text">Гриль BQ</span>
+                    <img class="week-grill-count week-count" src="../static/images/prizesPageImages/weekCountPrize.png">
                 </div>
                 <div class="week-aerogrill-prize-container week-icon-container">
                     <img class="week-aerogrill-prize-icon week-icon" src="../static/images/prizesPageImages/aerogrillIcon.png" alt="" />
-                    <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
+                    <span class="week-prize-text">Аэрогриль</span>
+                    <img class="week-aerogrill-count week-count" src="../static/images/prizesPageImages/weekCountPrize.png">
                 </div>
                 <div class="week-yandex-prize-container week-icon-container">
                     <img class="week-yandex-prize-icon week-icon" src="../static/images/prizesPageImages/yandexStationIcon.png" alt="" />
-                    <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
+                    <span class="week-prize-text">Умная колонка Яндекс.Станция Лайт</span>
+                    <img class="week-yandex-count week-count" src="../static/images/prizesPageImages/weekCountPrize.png">
                 </div>
                 <div class="week-robot-prize-container week-icon-container">
                     <img class="week-robot-prize-icon week-icon" src="../static/images/prizesPageImages/robotIcon.png" alt="" />
-                    <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
+                    <span class="week-prize-text">Робот-пылесос</span>
+                    <img class="week-robot-count week-count" src="../static/images/prizesPageImages/weekCountPrize.png">
                 </div>
                 <div class="week-biggrill-prize-container week-icon-container">
                     <img class="week-biggrill-prize-icon week-icon" src="../static/images/prizesPageImages/bigGrillIcon.png" alt="" />
-                    <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
+                    <span class="week-prize-text">Гриль</span>
+                    <img class="week-biggrill-count week-count" src="../static/images/prizesPageImages/weekCountPrize.png">
                 </div>
             </div>
+        </div>
+        <div class="hill-prize-container">
+            <div class="hill-prize-snake-container">
+                <img class="hill-prize-snake-icon" src="../static/images/prizesPageImages/snakeMiniYellow.png" />
+            </div>
+            <div class="hill-prize-main-container">
+                <span class="hill-prize-head-text">ОТДЫХ В ГОРНОМ АЛТАЕ</span>
+                <span class="hill-prize-text">Главный приз для тех кто полностью пройдет 2 этап конкурса!</span>
+                <img class="hill-prize-icon" src="../static/images/prizesPageImages/hillsImage.png" />
+            </div>
+
         </div>
         <div class="prizes-per-store-container">
             <div class="prizes-per-store-header">
