--- a/static/css/miniGamesStyle/_ticTacGame.scss
+++ b/static/css/miniGamesStyle/_ticTacGame.scss
@@ -15,15 +15,17 @@
   position: relative;
   background-color: var(--background-color);
   width: 35vw;
-  height: 33vw;
+  height: 25vw;
   border-radius: 1vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: 1vw;
+  transition: height 1s ease;
 
   @include mobile {
     width: 90vw;
-    height: 125vw;
+    height: 100vw;
     border-radius: 4vw;
   }
 }
@@ -65,13 +67,8 @@
 
 .tic-tac-game {
   display: flex;
-  height: 69%;
   justify-content: center;
   flex-direction: column;
-
-  @include mobile {
-    height: 83%;
-  }
 }
 
 .tic-tac-board {
@@ -114,7 +111,7 @@
   height: 4vw;
   background-color: #1A0543;
   right: 4vw;
-  top: 13.5vw;
+  top: 12vw;
   justify-content: center;
   align-items: center;
   border-radius: 1vw;
@@ -122,8 +119,8 @@
   @include mobile {
     width: 14vw;
     height: 14vw;
-    right: 38vw;
-    top: 12.5vw;
+    right: 7.5vw;
+    top: 91.5vw;
     border-radius: 4vw;
   }
 
@@ -133,5 +130,16 @@
     @include mobile {
       width: 10vw;
     }
+  }
+}
+
+.tic-tac-result-game {
+  text-align: center;
+  width: 40%;
+
+  @include mobile {
+    margin-top: 1vw;
+    width: 50%;
+    font-size: 4vw;
   }
 }
