--- a/static/css/prizesPageStyle/prizesMainStyle.css
+++ b/static/css/prizesPageStyle/prizesMainStyle.css
@@ -313,12 +313,16 @@ svg * {
   grid-area: mainPrizes;
   background-color: var(--background-color-alt);
   border-radius: 1vw;
-  padding-bottom: 1vw;
-  height: 40vw;
+  height: 43vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 @media (max-width: 900px) {
   .main-prizes-container {
-    height: 60vw;
+    height: 58vw;
+    justify-content: normal;
   }
 }
 
@@ -327,12 +331,12 @@ svg * {
 }
 .main-prizes-heading-container .main-prizes-snake-icon {
   margin-top: 2vw;
-  width: 21vw;
+  width: 32vw;
   object-fit: contain;
 }
 @media (max-width: 900px) {
   .main-prizes-heading-container .main-prizes-snake-icon {
-    width: 32vw;
+    width: 42vw;
   }
 }
 .main-prizes-heading-container .main-prizes-text-container {
@@ -364,64 +368,131 @@ svg * {
 .main-prizes-icon-container {
   display: flex;
   align-items: flex-end;
-  padding-left: 2.5vw;
+  width: 89%;
 }
 .main-prizes-icon-container .icon-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  position: relative;
 }
 .main-prizes-icon-container .main-prizes-icon-text {
   margin-top: 2vw;
   font-family: Inter, sans-serif;
   font-size: 1vw;
-  padding: 0 5.5vw;
   line-height: 1.25;
+  padding: 0 1.9vw;
 }
 @media (max-width: 900px) {
   .main-prizes-icon-container .main-prizes-icon-text {
     font-size: 2vw;
+    padding: 0 1vw;
+  }
+}
+.main-prizes-icon-container .icon-wrapper-column {
+  display: flex;
+  flex-direction: column;
+  row-gap: 3vw;
+}
+.main-prizes-icon-container .icon-wrapper-column .main-prizes-column-icon-text {
+  font-family: Inter, sans-serif;
+  margin-top: 1vw;
+  font-size: 1vw;
+  line-height: 1.25;
+}
+@media (max-width: 900px) {
+  .main-prizes-icon-container .icon-wrapper-column .main-prizes-column-icon-text {
+    font-size: 2vw;
   }
 }
 .main-prizes-icon-container .main-prizes-tvIcon {
-  width: 26vw;
+  width: 16vw;
   object-fit: contain;
 }
 @media (max-width: 900px) {
   .main-prizes-icon-container .main-prizes-tvIcon {
-    width: 34vw;
+    width: 24vw;
   }
 }
 .main-prizes-icon-container .main-prizes-playIcon {
-  width: 17vw;
+  width: 11vw;
   object-fit: contain;
 }
 @media (max-width: 900px) {
   .main-prizes-icon-container .main-prizes-playIcon {
-    width: 29vw;
+    width: 17vw;
   }
 }
 .main-prizes-icon-container .main-prizes-holodilnikIcon {
-  width: 13vw;
+  width: 6vw;
   object-fit: contain;
 }
 @media (max-width: 900px) {
   .main-prizes-icon-container .main-prizes-holodilnikIcon {
+    width: 9vw;
+  }
+}
+.main-prizes-icon-container .main-prizes-laptopIcon {
+  width: 16vw;
+  object-fit: contain;
+}
+@media (max-width: 900px) {
+  .main-prizes-icon-container .main-prizes-laptopIcon {
+    width: 29vw;
+  }
+}
+.main-prizes-icon-container .main-prizes-robotMainIcon {
+  width: 14vw;
+  object-fit: contain;
+}
+@media (max-width: 900px) {
+  .main-prizes-icon-container .main-prizes-robotMainIcon {
     width: 20vw;
   }
+}
+.main-prizes-icon-container .main-count {
+  position: absolute;
+  width: 4vw;
+}
+@media (max-width: 900px) {
+  .main-prizes-icon-container .main-count {
+    width: 6vw;
+  }
+}
+.main-prizes-icon-container .main-prizes-tvIcon-count {
+  top: -4vw;
+  right: -2vw;
+}
+.main-prizes-icon-container .main-prizes-playIcon-count {
+  top: -1.2vw;
+  right: -1vw;
+}
+.main-prizes-icon-container .main-prizes-holodilnikIcon-count {
+  top: 2vw;
+  right: 1vw;
+}
+.main-prizes-icon-container .main-prizes-laptopIcon-count {
+  top: -2vw;
+  right: -2vw;
+}
+.main-prizes-icon-container .main-prizes-robotMainIcon-count {
+  top: -3vw;
+  right: -2vw;
 }
 
 .week-prizes-container {
   background-color: var(--background-color-alt);
   border-radius: 1vw;
   grid-area: weekPrizes;
-  padding-bottom: 2vw;
-  height: 47vw;
+  height: 55vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 @media (max-width: 900px) {
   .week-prizes-container {
-    height: 66vw;
+    height: 69vw;
   }
 }
 
@@ -435,7 +506,7 @@ svg * {
 }
 @media (max-width: 900px) {
   .week-prizes-snake-icon {
-    width: 18vw;
+    width: 22vw;
   }
 }
 
@@ -484,6 +555,7 @@ svg * {
   justify-items: center;
   align-items: end;
   margin-top: 1vw;
+  width: 96%;
 }
 
 .week-icon-container {
@@ -491,7 +563,7 @@ svg * {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  font-size: 1vw;
+  font-size: 1.2vw;
 }
 @media (max-width: 900px) {
   .week-icon-container {
@@ -501,73 +573,194 @@ svg * {
 
 .week-prize-text {
   margin-top: 1.5vw;
-  padding: 0 5vw;
+  padding: 0 4vw;
   font-family: Inter, sans-serif;
   line-height: 1.25;
 }
 
 .week-grill-prize-container {
   grid-area: grill;
+  position: relative;
 }
 
 .week-aerogrill-prize-container {
   grid-area: aerogrill;
+  position: relative;
 }
 
 .week-yandex-prize-container {
   grid-area: yandex;
+  position: relative;
 }
 
 .week-robot-prize-container {
   grid-area: robot;
+  position: relative;
 }
 
 .week-biggrill-prize-container {
   grid-area: biggrill;
+  position: relative;
 }
 
-.week-grill-prize-container img {
+.week-grill-prize-icon {
+  height: 14vw;
+}
+@media (max-width: 900px) {
+  .week-grill-prize-icon {
+    height: 18vw;
+  }
+}
+
+.week-aerogrill-prize-icon {
+  height: 14vw;
+}
+@media (max-width: 900px) {
+  .week-aerogrill-prize-icon {
+    height: 18vw;
+  }
+}
+
+.week-yandex-prize-icon {
   height: 10vw;
 }
 @media (max-width: 900px) {
-  .week-grill-prize-container img {
-    height: 15vw;
+  .week-yandex-prize-icon {
+    height: 13vw;
   }
 }
 
-.week-aerogrill-prize-container img {
-  height: 10vw;
+.week-robot-prize-icon {
+  height: 9vw;
 }
 @media (max-width: 900px) {
-  .week-aerogrill-prize-container img {
-    height: 14vw;
+  .week-robot-prize-icon {
+    height: 13vw;
   }
 }
 
-.week-yandex-prize-container img {
-  height: 8vw;
+.week-biggrill-prize-icon {
+  height: 30vw;
 }
 @media (max-width: 900px) {
-  .week-yandex-prize-container img {
-    height: 11vw;
+  .week-biggrill-prize-icon {
+    height: 39vw;
   }
 }
 
-.week-robot-prize-container img {
-  height: 8vw;
+.week-count {
+  position: absolute;
+  width: 4vw;
 }
 @media (max-width: 900px) {
-  .week-robot-prize-container img {
-    height: 11vw;
+  .week-count {
+    width: 6vw;
   }
 }
 
-.week-biggrill-prize-container img {
-  height: 24vw;
+.week-grill-count {
+  top: -1vw;
+  right: -2vw;
+}
+
+.week-aerogrill-count {
+  top: -1.2vw;
+  right: -1vw;
 }
 @media (max-width: 900px) {
-  .week-biggrill-prize-container img {
-    height: 36vw;
+  .week-aerogrill-count {
+    right: -2vw;
+  }
+}
+
+.week-yandex-count {
+  top: -1vw;
+  right: 1vw;
+}
+@media (max-width: 900px) {
+  .week-yandex-count {
+    right: 4vw;
+  }
+}
+
+.week-robot-count {
+  top: -3vw;
+  right: 0;
+}
+
+.week-biggrill-count {
+  top: -2vw;
+  right: 0;
+}
+
+.hill-prize-container {
+  background-color: var(--background-color-alt);
+  border-radius: 1vw;
+  grid-area: hillPrize;
+  height: 28vw;
+  display: flex;
+  align-items: center;
+  font-family: "Bebas Neue", sans-serif;
+}
+@media (max-width: 900px) {
+  .hill-prize-container {
+    height: 40vw;
+  }
+}
+
+.hill-prize-snake-container {
+  display: flex;
+  width: 45%;
+  height: 100%;
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+.hill-prize-snake-container .hill-prize-snake-icon {
+  width: 27vw;
+  object-fit: contain;
+}
+@media (max-width: 900px) {
+  .hill-prize-snake-container .hill-prize-snake-icon {
+    width: 39vw;
+  }
+}
+
+.hill-prize-main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 55%;
+  row-gap: 1vw;
+  height: 100%;
+}
+.hill-prize-main-container .hill-prize-head-text {
+  font-size: 4vw;
+  line-height: 0.8;
+  margin-top: 3vw;
+}
+@media (max-width: 900px) {
+  .hill-prize-main-container .hill-prize-head-text {
+    font-size: 5vw;
+  }
+}
+.hill-prize-main-container .hill-prize-text {
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  font-size: 1.5vw;
+  line-height: 1.25;
+  padding: 0 2vw;
+}
+@media (max-width: 900px) {
+  .hill-prize-main-container .hill-prize-text {
+    font-size: 2.5vw;
+  }
+}
+.hill-prize-main-container .hill-prize-icon {
+  width: 26vw;
+}
+@media (max-width: 900px) {
+  .hill-prize-main-container .hill-prize-icon {
+    width: 46vw;
   }
 }
 
@@ -814,30 +1007,6 @@ svg * {
   }
 }
 
-.sound-switch {
-  display: flex;
-  position: fixed;
-  width: 5vw;
-  height: 5vw;
-  border-radius: 50%;
-  bottom: 1.5vw;
-  right: 1.5vw;
-  z-index: 10;
-  background-color: var(--background-color-el);
-  align-items: center;
-  justify-content: center;
-}
-@media (max-width: 900px) {
-  .sound-switch {
-    width: 8vw;
-    height: 8vw;
-  }
-}
-.sound-switch-icon {
-  object-fit: contain;
-  width: 50%;
-}
-
 .footer {
   grid-area: footer;
   height: 20vw;
@@ -882,6 +1051,30 @@ svg * {
     left: 27.5vw;
     position: absolute;
   }
+}
+
+.sound-switch {
+  display: flex;
+  position: fixed;
+  width: 5vw;
+  height: 5vw;
+  border-radius: 50%;
+  bottom: 1.5vw;
+  right: 1.5vw;
+  z-index: 10;
+  background-color: var(--background-color-el);
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 900px) {
+  .sound-switch {
+    width: 8vw;
+    height: 8vw;
+  }
+}
+.sound-switch-icon {
+  object-fit: contain;
+  width: 50%;
 }
 
 .onload-wrapper {
@@ -963,14 +1156,14 @@ body {
   display: grid;
   grid-template-columns: 1fr 64.5161290323dvw 1fr;
   grid-template-rows: auto auto auto auto auto auto auto 1fr;
-  grid-template-areas: ". header ." ". guide ." ". mainPrizes ." ". weekPrizes ." ". prizesInAll ." ". firstFinalists ." ". prizesFromPartners ." "footer footer footer";
+  grid-template-areas: ". header ." ". guide ." ". mainPrizes ." ". weekPrizes ." ". hillPrize ." ". prizesInAll ." ". firstFinalists ." ". prizesFromPartners ." "footer footer footer";
   row-gap: 1.5vw;
 }
 @media (max-width: 900px) {
   .main-prizes-wrapper {
     justify-content: center;
     grid-template-columns: 95vw;
-    grid-template-areas: "header" "guide" "mainPrizes" "weekPrizes" "prizesInAll" "firstFinalists" "prizesFromPartners";
+    grid-template-areas: "header" "guide" "mainPrizes" "weekPrizes" "hillPrize" "prizesInAll" "firstFinalists" "prizesFromPartners";
     row-gap: 2vw;
   }
 }
