--- a/templates/index.html
+++ b/templates/index.html
@@ -105,36 +105,40 @@
                         </div>
                     </div>
                     <div class="complete-progress">
-                        <span class="complete-progress-count">40 из 40</span>
-                        <div class="complete-progress-bar"></div>
+                        <span class="complete-progress-count"></span>
+                        <div class="progress-bar">
+                            <div class="no-complete-progress-bar">
+                                <div class="complete-progress-bar"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="profile-authorization profile">
-                    <div class="profile-registration">
-                        <button class="profile-registration__button">Регистрация</button>
+                <div class="profile-actions-container">
+                    <div class="rewards-button">
+                        Награды
                     </div>
-                    <div class="profile-entrance">
-                        <button class="profile-entrance__button">Вход</button>
-                    </div>
-                </div>
-                <div class="draw-date-container">
-                    <div class="draw-date">
-                        <div class="draw-date-checkbox">
-                            <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconYes.png" alt="" />
+                    <div class="draw-date-container">
+                        <div class="draw-date">
+                            <div class="draw-date-checkbox">
+                                <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconYes.png" alt="" />
+                            </div>
+                            <span class="draw-date-text">розыгрыш призов с 1 по 7</span>
                         </div>
-                        <span class="draw-date-text">розыгрыш призов с 1 по 7</span>
-                    </div>
-                    <div class="draw-date">
-                        <div class="draw-date-checkbox">
-                            <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
+                        <div class="draw-date">
+                            <div class="draw-date-checkbox">
+                                <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
+                            </div>
+                            <span class="draw-date-text">розыгрыш призов с 8 по 14</span>
                         </div>
-                        <span class="draw-date-text">розыгрыш призов с 8 по 14</span>
-                    </div>
-                    <div class="draw-date">
-                        <div class="draw-date-checkbox">
-                            <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
+                        <div class="draw-date">
+                            <div class="draw-date-checkbox">
+                                <img class="draw-date-checkbox-icon" src="../static/images/mainPageImages/drawIconNot.png" alt="" />
+                            </div>
+                            <span class="draw-date-text">розыгрыш призов с 15 по 21</span>
                         </div>
-                        <span class="draw-date-text">розыгрыш призов с 15 по 21</span>
+                    </div>
+                    <div class="check-registration-button">
+                        Регистрация чеков
                     </div>
                 </div>
             </div>
