--- a/static/css/mainPageStyle/_profileAndDateInfo.scss
+++ b/static/css/mainPageStyle/_profileAndDateInfo.scss
@@ -1,60 +1,9 @@
 .profile-and-date-container {
-  width: 40%;
+  width: 34%;
   background-color: #EEE;
   border-radius: 1vw;
   box-shadow: -1vw 1vw 1vw 0px rgba(0, 0, 0, 0.25);
 }
-
-.profile-authorization {
-  border-radius: 1vw;
-  height: 50%;
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  row-gap: 1vw;
-
-
-  @include mobile {
-    height: 60%;
-    row-gap: 1.5vw;
-  }
-
-  .profile-entrance {
-
-    &__button {
-      background-color: #D92446;
-      border-radius: 3vw;
-      font-size: 1.5vw;
-      height: 3vw;
-      width: 15vw;
-
-      @include mobile {
-        height: 4.5vw;
-        width: 25vw;
-        font-size: 2.5vw;
-      }
-    }
-  }
-
-  .profile-registration {
-
-    &__button {
-      height: 3vw;
-      width: 15vw;
-      background-color: #FF4A15;
-      border-radius: 3vw;
-      font-size: 1.5vw;
-
-      @include mobile {
-        height: 4.5vw;
-        width: 25vw;
-        font-size: 2.5vw;
-      }
-    }
-  }
-}
-
 
 .profile {
   background-color: var(--background-color-el);
@@ -62,7 +11,7 @@
   box-shadow: -1vw 1vw 1vw 0px rgba(0, 0, 0, 0.25);
 
   &-container {
-    height: 50%;
+    height: 43%;
     display: grid;
     grid-template-columns: 0.7fr 0.3fr;
     grid-template-rows: auto 1fr;
@@ -71,7 +20,8 @@
           "progres progres";
 
     @include mobile {
-      height: 55%;
+      height: 41%;
+      grid-template-columns: 0.6fr 0.4fr;
     }
   }
 
@@ -93,8 +43,9 @@
       background-image: url("../../images/mainPageImages/avatarPhoto.jpg");
 
       @include mobile {
-        width: 9vw;
-        height: 9vw;
+        width: 8vw;
+        height: 8vw;
+        border: 0.6vw solid white;
       }
 
     }
@@ -115,6 +66,10 @@
     display: flex;
     grid-area: toys;
     column-gap: 0.5vw;
+
+    @include mobile {
+      justify-content: flex-end;
+    }
 
     .toy-gold-container {
       display: flex;
@@ -164,66 +119,152 @@
       font-size: 2vw;
 
       @include mobile {
-        font-size: 2.5vw;
+        font-size: 3.5vw;
       }
     }
 
-    &-bar {
-      border-radius: 1vw;
-      height: 0.35vw;
+    .progress-bar {
+      display: flex;
+      align-items: center;
       width: 75%;
-      background-color: pink;
-      margin-top: 0.5vw;
 
       @include mobile {
-        height: 0.5vw;
+        width: 80%;
+      }
+
+      .no-complete-progress-bar {
+        border-radius: 1vw;
+        height: 0.35vw;
+        background-color: #D9D9D9;
+        margin-top: 0.5vw;
+        width: 100%;
+        position: relative;
+
+        @include mobile {
+          height: 1vw;
+        }
+
+        .complete-progress-bar {
+          border-radius: 1vw;
+          height: 0.35vw;
+          background-color: #FE81CD;
+          position: absolute;
+          top: 0;
+          left: 0;
+
+          @include mobile {
+            height: 1vw;
+          }
+        }
       }
     }
   }
 }
 
-.draw-date-container {
-  padding-top: 5%;
-  font-size: 1.25vw;
-  padding-left: 6%;
-  display: flex;
+.profile-actions-container {
   flex-direction: column;
   color: #000;
-  row-gap: 0.5vw;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  row-gap: 0.8vw;
+  height: 57%;
 
 
   @include mobile {
-    font-size: 2vw;
-    row-gap: 0.1vw;
+    height: 59%;
+    row-gap: 2vw;
   }
-}
 
-
-.draw-date {
-  display: flex;
-  align-items: center;
-  column-gap: 4%;
-
-
-
-  &-checkbox {
+  .rewards-button {
+    text-align: center;
+    width: 80%;
+    background-color: #FF4A15;
+    border-radius: 1vw;
+    color: white;
+    box-shadow: 0 0.2vw 0.5vw 0 #00000040;
+    font-family: "Akshar", sans-serif;
+    font-weight: 600;
+    font-size: 1.2vw;
     display: flex;
-    background-color: #D9D9D9;
-    height: 2vw;
-    width: 2vw;
-    padding: 1.5%;
+    justify-content: center;
+    height: 2.2vw;
+    align-items: center;
+    cursor: pointer;
 
     @include mobile {
-      height: 2.5vw;
-      width: 2.5vw;
-      padding: 1%;
+      border-radius: 1.5vw;
+      font-size: 2.2vw;
+      height: 4vw;
+      box-shadow: 0 0.5vw 0.5vw 0 #00000040;
+    }
+  }
+
+  .draw-date-container {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5vw;
+    font-size: 1.1vw;
+
+    @include mobile {
+      width: 92%;
+      row-gap: 1vw;
+      font-size: 1.8vw;
     }
 
-    &-icon {
-      object-fit: contain;
+    .draw-date {
+      display: flex;
+      align-items: center;
+      column-gap: 4%;
+
+      &-checkbox {
+        display: flex;
+        background-color: #D9D9D9;
+        height: 1.5vw;
+        width: 1.5vw;
+        padding: 1.5%;
+
+        @include mobile {
+          height: 3vw;
+          width: 3vw;
+          padding: 2%;
+        }
+
+        &-icon {
+          object-fit: contain;
+        }
+      }
+    }
+  }
+
+  .check-registration-button {
+    width: 80%;
+    text-align: center;
+    background-color: #D92446;
+    color: #fff;
+    border-radius: 1.5vw;
+    font-size: 1.5vw;
+    height: 4vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0.2vw 0.2vw 0 #00000063;
+    cursor: pointer;
+
+    @include mobile {
+      height: 7vw;
+      font-size: 2.2vw;
+      border-radius: 2vw;
+      box-shadow: 0 0.5vw 0.2vw 0 #00000063;
     }
   }
 }
+
+
+
+
 
 
 
